--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ba2d5d0
-	base = f32379c
+	base = ec06bdb
 	trim = rosidl_generator_py
-	trimbase = 
+	trimbase = f32379c
